--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <div>
                             <div class="btn-group">
                                 <button id="copyHtmlBtn" class="btn btn-sm btn-outline-primary">复制 HTML</button>
-                                <button id="copyTextBtn" class="btn btn-sm btn-outline-success">复制文本</button>
+                                <button id="copyTextBtn" class="btn btn-sm btn-outline-success">复制格式</button>
                             </div>
                         </div>
                     </div>
@@ -104,6 +104,14 @@
                                     <input class="form-check-input" type="checkbox" id="useIndent" checked>
                                     <label class="form-check-label" for="useIndent">
                                         首行缩进
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="col-md-4">
+                                <div class="form-check mt-4">
+                                    <input class="form-check-input" type="checkbox" id="showReferenceLinks" checked>
+                                    <label class="form-check-label" for="showReferenceLinks">
+                                        显示参考链接
                                     </label>
                                 </div>
                             </div>
