--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                                     <label for="fontSize" class="form-label">字号</label>
                                     <select id="fontSize" class="form-select">
                                         <option value="14px">14px</option>
-                                        <option value="15px" selected>15px</option>
+                                        <option value="15px">15px</option>
                                         <option value="16px">16px</option>
                                         <option value="17px">17px</option>
-                                        <option value="18px">18px</option>
+                                        <option value="18px" selected>18px</option>
                                     </select>
                                 </div>
                             </div>
@@ -109,7 +109,7 @@
                             </div>
                             <div class="col-md-4">
                                 <div class="form-check mt-4">
-                                    <input class="form-check-input" type="checkbox" id="showReferenceLinks" checked>
+                                    <input class="form-check-input" type="checkbox" id="showReferenceLinks">
                                     <label class="form-check-label" for="showReferenceLinks">
                                         显示参考链接
                                     </label>
